--- a/docs/xo15.md
+++ b/docs/xo15.md
@@ -8,7 +8,7 @@ SERVER:
     In this use case, the computer memory is needed for serving clients. The graphical User Interface will use memory that is really needed to keep track of what is happening in each of the clients. If there are only a handfull of clients, this may not be too much of a concern. But if there are many clients, it is best to turn off the GUI (see next section).
 
 CLIENT:
-    Used as a stand alone learning device, or with only a few clients, it will be more convenient to enable the GUI, and perhaps even ask the XO1.5 to boot directly into the browser.
+    Used as a stand alone learning device, or with only a few clients, it will be more convenient to enable the GUI, and perhaps even ask the XO1.5 to boot directly into the Internet-in-a-Box browser.
 
 How to change the Boot Configuration
 ------------------------------------
